--- a/public/css/player.css
+++ b/public/css/player.css
@@ -203,15 +203,9 @@ html, body{
     background-color:#000;
     color:#fff;
     padding:5px;
-}
-.character .power .power-title{
     font-size: 16px;
     line-height: 19px;
-    margin-right: 10px;
-}
-.character .power .power-num{
-    font-size: 23px;
-    line-height: 27px;
+    padding-left: 10px;
 }
 
 .third{
