--- a/public/css/player.css
+++ b/public/css/player.css
@@ -18,6 +18,49 @@ html, body{
     text-shadow: var(--txsh);
     font-size:20px;
 }
+
+/* profile */
+.player{
+    margin:20px;
+}
+.info{
+    padding: 20px;
+}
+.info .stats{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px 20px;
+    justify-items: center;
+}
+.stats .stat{
+    width:100%;
+    max-width: 200px;
+    min-width: 125px;
+    height: auto;
+    position: relative;
+    text-align: center;
+    color: #fff;
+    text-shadow: var(--txsh);
+    padding: 0.5em;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    transform: skewX(-5deg);
+    box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+}
+.stat .stat-title{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    white-space: nowrap;
+    top: -40%;
+    left: 0;
+}
+.stat .stat-desc{
+    text-align: center;
+    font-size: 20px;
+}
 .sort-container{
     float:right;
 }
@@ -233,15 +276,25 @@ html, body{
   .characters-unlocked, .characters-remaining, .characters-arriving{
         grid-template-columns: repeat(3, 1fr);
     }
+    .info .stats{
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 @media only screen and (max-width: 1000px) {
   .characters-unlocked, .characters-remaining, .characters-arriving{
         grid-template-columns: repeat(2, 1fr);
+    }
+    .info .stats{
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 @media only screen and (max-width: 670px) {
   .characters-unlocked, .characters-remaining, .characters-arriving{
         margin: 0 10px;
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .info .stats{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
